--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Introduction
 
-Dataverse scraping for CS5040 - Database Systems course. To navigate project, open `.Rproj` file, then head to `table_of_conents.R`. Scripts are listed in order. To navigate to a script, put cursor on file path and hit `F2`, or `ctrl + left click` on the file path. The `6_outputs` folder contains csv outputs to work with in RDBMS. They still need some work in terms of creating and linking keys across tables.
+Dataverse scraping and database programming for or CS5040 - Database Systems course. 
 
+Data wrangling is in the `r/` folder. The `r/table_of_contents.R` file navigates through the workflow. Once the data is cleaned, it converts data frames into sql insert statements and saves it into the `sql/` folder.
+
+On the sql side, scripts are numbered in order starting with 1_tables. The run.sql file is the script Byung shared that sets some options and has outputs saved to .out files. The runall.sql script runs all the project scripts starting with 1. 
 
